# shootogethorthings

./: Cargo.toml  README.md  todo.txt
_old/: client_connection_handling_tcp.rs  client_netcode.rs  dumb_client.rs  dumb_client_tcp.rs  server_connection_handling.rs  sketch.rs
docs/: networking-notes.md
src/: start_client.rs  start_server.rs
src/client/: components.rs  draw.rs  entity_archetypes.rs  event_processing.rs  game.rs  graphics.rs  message_processing.rs  mod.rs  settings.rs  state.rs  udp_networking.rs
src/client/systems/: controlling.rs  mod.rs  physics.rs
src/common/: client_to_server.rs  game_objects.rs  mod.rs  network_settings.rs  server_to_client.rs  util.rs
src/server/: client_bookkeeping.rs  enque_outbound_messages.rs  game.rs  message_processing.rs  mod.rs  settings.rs  state.rs  udp_networking.rs
