[package]
name = "shootogethorthings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/start_client.rs"


[[bin]]
name = "server"
path = "src/start_server.rs"


[dependencies]
bincode = "1.3.3"
chrono = "0.4.31"
crossbeam = { version = "0.8.2", features = ["crossbeam-queue"] }
glam = {version="0.24.2", features=["serde"]}
lazy_static = "1.4.0"
legion = "0.4.0"
raylib = "3.7.0"
serde = {version="1.0.188", features=["derive"]}
tokio = {version="1.32.0", features=["net", "io-util", "full"]}
uuid = { version = "1.4.1", features = ["v4"] }
