[package]
name = "shootogethorthings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/start_client.rs"


[[bin]]
name = "server"
path = "src/start_server.rs"


[dependencies]
bincode = "1.3.3"
chrono = "0.4.42"
crossbeam = { version = "0.8.4", features = ["crossbeam-queue"] }
glam = { version = "0.30.8", features = ["serde"] }
hecs = "0.10.5"
lazy_static = "1.5.0"
raylib = "5.5.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["net", "io-util", "full"] }
uuid = { version = "1.18.1", features = ["v4"] }
